@@ -9,6 +9,7 @@ version <next>:
 - VP8 in Ogg muxing
 - curves filter doesn't automatically insert points at x=0 and x=1 anymore
 - 16-bit support in curves filter
+- 16-bit support in selectivecolor filter
 
 
 version 3.1:
